--- a/music.html
+++ b/music.html
@@ -1316,8 +1316,8 @@ audio {
       </div>
 
 <div class="track-card">
-        <div class="track-title">Sprout</div>
-        <div class="track-description">Something sprouts and grows.</div>
+        <div class="track-title">Something Smooth</div>
+        <div class="track-description">Silk-like textures flowing through temporal space, creating an effortless listening experience that soothes the restless mind.</div>
         <div class="waveform-visual">
           <div class="waveform-bars">
             <div class="waveform-bar"></div>
@@ -1331,11 +1331,89 @@ audio {
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/Sprout-1.mp3" preload="metadata"></audio>
+          <audio src="music/somethingSmooth.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
-              <div class="track-name">Sprout</div>
+              <div class="track-name">Something Smooth</div>
+              <div class="track-time">0:00 / 0:00</div>
+            </div>
+          </div>
+          <div class="progress-container">
+            <div class="progress-bar">
+              <div class="progress-fill"></div>
+            </div>
+          </div>
+          <div class="volume-container">
+            <span class="volume-icon">🔊</span>
+            <div class="volume-slider">
+              <div class="volume-fill"></div>
+            </div>
+            <span class="volume-text">70%</span>
+          </div>
+        </div>
+      </div>
+
+<div class="track-card">
+        <div class="track-title">The Builder</div>
+        <div class="track-description">Creation brings form.</div>
+        <div class="waveform-visual">
+          <div class="waveform-bars">
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+          </div>
+        </div>
+        <div class="audio-player">
+          <audio src="music/TheBuiler.mp3" preload="metadata"></audio>
+          <div class="player-controls">
+            <button class="play-button" data-action="play">▶</button>
+            <div class="track-info">
+              <div class="track-name">The Builder</div>
+              <div class="track-time">0:00 / 0:00</div>
+            </div>
+          </div>
+          <div class="progress-container">
+            <div class="progress-bar">
+              <div class="progress-fill"></div>
+            </div>
+          </div>
+          <div class="volume-container">
+            <span class="volume-icon">🔊</span>
+            <div class="volume-slider">
+              <div class="volume-fill"></div>
+            </div>
+            <span class="volume-text">70%</span>
+          </div>
+        </div>
+      </div>
+
+<div class="track-card">
+        <div class="track-title">Thursday Stuff</div>
+        <div class="track-description">A Thursday vibe.</div>
+        <div class="waveform-visual">
+          <div class="waveform-bars">
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+          </div>
+        </div>
+        <div class="audio-player">
+          <audio src="music/ThursdayStuff.mp3" preload="metadata"></audio>
+          <div class="player-controls">
+            <button class="play-button" data-action="play">▶</button>
+            <div class="track-info">
+              <div class="track-name">Thursday Stuff</div>
               <div class="track-time">0:00 / 0:00</div>
             </div>
           </div>
@@ -1375,6 +1453,84 @@ audio {
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
               <div class="track-name">Sunday Relift</div>
+              <div class="track-time">0:00 / 0:00</div>
+            </div>
+          </div>
+          <div class="progress-container">
+            <div class="progress-bar">
+              <div class="progress-fill"></div>
+            </div>
+          </div>
+          <div class="volume-container">
+            <span class="volume-icon">🔊</span>
+            <div class="volume-slider">
+              <div class="volume-fill"></div>
+            </div>
+            <span class="volume-text">70%</span>
+          </div>
+        </div>
+      </div>
+
+<div class="track-card">
+        <div class="track-title">Trust</div>
+        <div class="track-description">Following the unfoldment is the path and the way:)</div>
+        <div class="waveform-visual">
+          <div class="waveform-bars">
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+          </div>
+        </div>
+        <div class="audio-player">
+          <audio src="music/Trust.mp3" preload="metadata"></audio>
+          <div class="player-controls">
+            <button class="play-button" data-action="play">▶</button>
+            <div class="track-info">
+              <div class="track-name">Trust</div>
+              <div class="track-time">0:00 / 0:00</div>
+            </div>
+          </div>
+          <div class="progress-container">
+            <div class="progress-bar">
+              <div class="progress-fill"></div>
+            </div>
+          </div>
+          <div class="volume-container">
+            <span class="volume-icon">🔊</span>
+            <div class="volume-slider">
+              <div class="volume-fill"></div>
+            </div>
+            <span class="volume-text">70%</span>
+          </div>
+        </div>
+      </div>
+
+<div class="track-card">
+        <div class="track-title">Tuesday Meh</div>
+        <div class="track-description">Sometimes it do, sometimes it don't, meh</div>
+        <div class="waveform-visual">
+          <div class="waveform-bars">
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+            <div class="waveform-bar"></div>
+          </div>
+        </div>
+        <div class="audio-player">
+          <audio src="music/TuesdayMeh.mp3" preload="metadata"></audio>
+          <div class="player-controls">
+            <button class="play-button" data-action="play">▶</button>
+            <div class="track-info">
+              <div class="track-name">Tuesday Meh</div>
               <div class="track-time">0:00 / 0:00</div>
             </div>
           </div>
