--- a/music.html
+++ b/music.html
@@ -1277,8 +1277,8 @@ audio {
       </div>
 
       <div class="track-card">
-        <div class="track-title">Something Smooth</div>
-        <div class="track-description">Silk-like textures flowing through temporal space, creating an effortless listening experience that soothes the restless mind.</div>
+        <div class="track-title">Timothy Tweak</div>
+        <div class="track-description">Robot breakdown, not crash-out, break it down :).</div>
         <div class="waveform-visual">
           <div class="waveform-bars">
             <div class="waveform-bar"></div>
@@ -1292,11 +1292,11 @@ audio {
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/somethingSmooth.mp3" preload="metadata"></audio>
+          <audio src="music/TimothyTweak.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
-              <div class="track-name">Something Smooth</div>
+              <div class="track-name">Timothy Tweak</div>
               <div class="track-time">0:00 / 0:00</div>
             </div>
           </div>
@@ -1370,7 +1370,7 @@ audio {
           </div>
         </div>
         <div class="audio-player">
-          <audio src="music/TheBuiler.mp3" preload="metadata"></audio>
+          <audio src="music/TheBuilder.mp3" preload="metadata"></audio>
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
