--- a/music.html
+++ b/music.html
@@ -867,7 +867,7 @@ audio {
           <div class="player-controls">
             <button class="play-button" data-action="play">▶</button>
             <div class="track-info">
-              <div class="track-name">Chill Tribal</div>
+              <div class="track-name">Chibi Tribal</div>
               <div class="track-time">0:00 / 0:00</div>
             </div>
           </div>
