--- a/music.html
+++ b/music.html
@@ -250,27 +250,7 @@ h1 {
   color: rgba(138, 43, 226, 1);
 }
 
-.now-playing-bar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.9);
-  backdrop-filter: blur(20px);
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 1rem 2rem;
-  display: none;
-  align-items: center;
-  gap: 1rem;
-  z-index: 100;
-  transform: translateY(100%);
-  transition: transform 0.3s ease;
-}
 
-.now-playing-bar.show {
-  display: flex;
-  transform: translateY(0);
-}
 
 .now-playing-info {
   flex: 1;
@@ -640,6 +620,146 @@ audio {
 
   .track-info {
     text-align: center;
+  }
+}
+<!-- Updated Now Playing Bar with prev/next buttons and time display -->
+<div class="now-playing-bar" id="nowPlayingBar">
+  <!-- Previous Track Button -->
+  <button class="nav-track-button" id="prevTrackButton">⏮</button>
+  
+  <!-- Play/Pause Button -->
+  <div class="global-play-button" id="globalPlayButton">▶</div>
+  
+  <!-- Next Track Button -->
+  <button class="nav-track-button" id="nextTrackButton">⏭</button>
+  
+  <!-- Track Info Section -->
+  <div class="now-playing-info">
+    <div class="now-playing-title" id="nowPlayingTitle">No Track Playing</div>
+    <div class="now-playing-progress">
+      <div class="now-playing-fill" id="nowPlayingFill"></div>
+    </div>
+  </div>
+  
+  <!-- Time Display -->
+  <div class="time-display" id="timeDisplay">0:00 / 0:00</div>
+  
+  <!-- Track Counter (kept as secondary info) -->
+  <div class="track-counter" id="trackCounter">0 / 0</div>
+</div>
+
+<!-- Additional CSS for the new elements -->
+<style>
+.nav-track-button {
+  background: rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  color: rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: 0.9rem;
+}
+
+.nav-track-button:hover {
+  background: rgba(255, 255, 255, 0.1);
+  border-color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.9);
+  transform: scale(1.05);
+}
+
+.nav-track-button:active {
+  transform: scale(0.95);
+}
+
+.time-display {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 0.85rem;
+  white-space: nowrap;
+  font-family: 'Source Sans Pro', monospace;
+  min-width: 80px;
+  text-align: center;
+}
+
+/* Adjust the now-playing-bar to better accommodate new elements */
+.now-playing-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.9);
+  backdrop-filter: blur(20px);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 1rem 2rem;
+  display: none;
+  align-items: center;
+  gap: 1rem;
+  z-index: 100;
+  transform: translateY(100%);
+  transition: transform 0.3s ease;
+}
+
+.now-playing-bar.show {
+  display: flex;
+  transform: translateY(0);
+}
+
+/* Adjust the info section to take up remaining space */
+.now-playing-info {
+  flex: 1;
+  min-width: 0;
+  margin: 0 0.5rem;
+}
+
+/* Make track counter smaller and less prominent */
+.track-counter {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.75rem;
+  white-space: nowrap;
+  min-width: 40px;
+  text-align: center;
+}
+
+/* Mobile responsive adjustments */
+@media (max-width: 768px) {
+  .now-playing-bar {
+    padding: 0.75rem 1rem;
+    gap: 0.75rem;
+  }
+  
+  .nav-track-button {
+    width: 32px;
+    height: 32px;
+    font-size: 0.8rem;
+  }
+  
+  .global-play-button {
+    width: 36px;
+    height: 36px;
+  }
+  
+  .time-display {
+    font-size: 0.75rem;
+    min-width: 70px;
+  }
+  
+  .track-counter {
+    font-size: 0.7rem;
+    min-width: 35px;
+  }
+}
+
+@media (max-width: 480px) {
+  .track-counter {
+    display: none; /* Hide track counter on very small screens */
+  }
+  
+  .now-playing-bar {
+    gap: 0.5rem;
   }
 }
   </style>
@@ -1556,15 +1676,31 @@ audio {
   </div> <!-- End of .music-container -->
 
   <!-- Now Playing Bar -->
-  <div class="now-playing-bar" id="nowPlayingBar">
-   <div class="global-play-button" id="globalPlayButton">▶</div>
-<div class="now-playing-info">
-  <div class="now-playing-title" id="nowPlayingTitle">No Track Playing</div>
-  <div class="now-playing-progress">
-    <div class="now-playing-fill" id="nowPlayingFill"></div>
+ <!-- Updated Now Playing Bar with prev/next buttons and time display -->
+<div class="now-playing-bar" id="nowPlayingBar">
+  <!-- Previous Track Button -->
+  <button class="nav-track-button" id="prevTrackButton">⏮</button>
+  
+  <!-- Play/Pause Button -->
+  <div class="global-play-button" id="globalPlayButton">▶</div>
+  
+  <!-- Next Track Button -->
+  <button class="nav-track-button" id="nextTrackButton">⏭</button>
+  
+  <!-- Track Info Section -->
+  <div class="now-playing-info">
+    <div class="now-playing-title" id="nowPlayingTitle">No Track Playing</div>
+    <div class="now-playing-progress">
+      <div class="now-playing-fill" id="nowPlayingFill"></div>
+    </div>
   </div>
+  
+  <!-- Time Display -->
+  <div class="time-display" id="timeDisplay">0:00 / 0:00</div>
+  
+  <!-- Track Counter (kept as secondary info) -->
+  <div class="track-counter" id="trackCounter">0 / 0</div>
 </div>
-<div class="track-counter" id="trackCounter">0 / 0</div>
 
   </div>
 
