--- a/games.html
+++ b/games.html
@@ -381,11 +381,10 @@
       <!-- Nimble Cards -->
       <div class="game-card">
         <h2 class="game-title">Nimble Cards</h2>
-        <span class="game-status status-published">Published</span>
+        <span class="game-status status-Stopped Development">In Development</span>
         
         <p class="game-description">
-          A fast-paced card game that challenges reflexes and strategy. Players must think quickly 
-          and act decisively in this engaging blend of skill and timing.
+          A predecessor to Cruxfade.
         </p>
         
         <div class="game-stats">
