--- a/games.html
+++ b/games.html
@@ -381,7 +381,7 @@
       <!-- Nimble Cards -->
       <div class="game-card">
         <h2 class="game-title">Nimble Cards</h2>
-        <span class="game-status status-Stopped Development">In Development</span>
+        <span class="game-status status-Stopped Development">Published</span>
         
         <p class="game-description">
           A predecessor to Cruxfade.
