--- a/games.html
+++ b/games.html
@@ -384,7 +384,7 @@
         <span class="game-status status-Stopped Development">Published</span>
         
         <p class="game-description">
-          A predecessor to Cruxfade.
+          The predecessor to Cruxfade. I stopped development when it got too complex to build in GDevelop.
         </p>
         
         <div class="game-stats">
