--- a/games.html
+++ b/games.html
@@ -381,7 +381,7 @@
       <!-- Nimble Cards -->
       <div class="game-card">
         <h2 class="game-title">Nimble Cards</h2>
-        <span class="game-status status-Stopped Development">published</span>
+        <span class="game-status status-Stopped Development">In Development</span>
         
         <p class="game-description">
           The predecessor to Cruxfade. I stopped development when it got too complex to build in GDevelop.
