--- a/games.html
+++ b/games.html
@@ -214,6 +214,12 @@
       border: 1px solid rgba(52, 152, 219, 0.3);
     }
 
+    .status-stopped {
+      background: rgba(222, 0, 0, 0.2);
+      color: #3498db;
+      border: 1px solid rgba(222, 0, 0, 0.3);
+    }
+
     .game-description {
       color: rgba(255, 255, 255, 0.8);
       line-height: 1.6;
@@ -381,7 +387,7 @@
       <!-- Nimble Cards -->
       <div class="game-card">
         <h2 class="game-title">Nimble Cards</h2>
-        <span class="game-status status-Stopped Development">In Development</span>
+        <span class="game-status status-Stopped Development">Stopped Development</span>
         
         <p class="game-description">
           The predecessor to Cruxfade. I stopped development when it got too complex to build in GDevelop.
