--- a/games.html
+++ b/games.html
@@ -216,7 +216,7 @@
 
     .status-stopped {
       background: rgba(222, 0, 0, 0.2);
-      color: #3498db;
+      color: #de0000;
       border: 1px solid rgba(222, 0, 0, 0.3);
     }
 
