--- a/games.html
+++ b/games.html
@@ -215,9 +215,9 @@
     }
 
     .status-stopped {
-      background: rgba(222, 0, 0, 0.2);
-      color: #de0000;
-      border: 1px solid rgba(222, 0, 0, 0.3);
+      background: rgba(180, 15, 15, 0.2);
+      color: #43ff64d9;
+      border: 1px solid rgba(180, 15, 15, 0.3);
     }
 
     .game-description {
