--- a/games.html
+++ b/games.html
@@ -216,7 +216,7 @@
 
     .status-stopped {
       background: rgba(180, 15, 15, 0.2);
-      color: #43ff64d9;
+      color: #b40f0f;
       border: 1px solid rgba(180, 15, 15, 0.3);
     }
 
