--- a/index.html
+++ b/index.html
@@ -282,23 +282,23 @@
 
     .mobile-menu-button {
       display: none;
-      background: rgba(0, 0, 0, 0.3);
+      background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(10px);
       color: #fff;
-      border: 1px solid rgba(255, 255, 255, 0.2);
+      border: 1px solid rgba(255, 255, 255, 0.3);
       padding: 1rem;
       border-radius: 8px;
       font-size: 1.2rem;
       cursor: pointer;
       transition: all 0.3s ease;
-      margin-bottom: 1rem;
+      margin: 0 auto 1rem;
       width: fit-content;
-      align-self: center;
     }
 
     .mobile-menu-button:hover {
-      background: rgba(255, 255, 255, 0.15);
-      border-color: rgba(255, 255, 255, 0.4);
+      background: rgba(255, 255, 255, 0.2);
+      border-color: rgba(255, 255, 255, 0.5);
+      transform: translateY(-2px);
     }
 
     .nav {
@@ -354,8 +354,12 @@
       width: 100%;
       text-align: center;
       font-size: 0.9rem;
-      color: rgba(255,255,255,0.5);
+      color: rgba(255,255,255,0.75);
       font-family: 'Source Sans Pro', sans-serif;
+      backdrop-filter: blur(0px);
+      background: rgba(0, 0, 0, 0.1);
+      padding: 0.5rem 0;
+      z-index: 5;
     }
 
     @media (max-width: 768px) {
