--- a/gallery.html
+++ b/gallery.html
@@ -229,17 +229,30 @@
     }
 
     .cruxfade-link {
+      font-size: 1.3rem;
+      margin-bottom: 2rem;
       color: rgba(255, 255, 255, 0.7) !important;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      padding: 0.5rem 1rem !important;
       border: 1px solid rgba(255, 255, 255, 0.3) !important;
-      background: rgba(0, 0, 0, 0.2) !important;
-      position: relative;
+      border-radius: 8px;
+      backdrop-filter: blur(5px);
+      background: transparent !important;
+      box-shadow: none !important;
+      transform: none !important;
+      height: 60px !important;
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
     }
 
     .cruxfade-link:hover {
       color: #fff !important;
       border-color: rgba(255, 255, 255, 0.6) !important;
       background: rgba(255, 255, 255, 0.1) !important;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3), 0 0 20px rgba(255, 255, 255, 0.2) !important;
+      transform: translateY(-2px) !important;
+      box-shadow: none !important;
     }
 
     .gallery {
