--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,9 @@
       opacity: 0.9;
       position: fixed;
       width: 100%;
-      height: 100%;
+      height: 300vh;
+      top: 0;
+      left: 0;
       z-index: -1;
       animation: mistScroll 120s linear infinite;
     }
