--- a/games.html
+++ b/games.html
@@ -22,7 +22,7 @@
     }
 
     .background {
-      background: rgba(20, 20, 30, 0.8);
+      background: rgba(3, 3, 3, 0.4);
       opacity: 1;
       position: fixed;
       width: 100%;
@@ -32,10 +32,10 @@
 
     .mist-overlay {
       background: url('images/mist-overlay.png') repeat;
-      opacity: 0.7;
+      opacity: 0.9;
       position: fixed;
       width: 100%;
-      height: 250vh;
+      height: 500vh;
       z-index: -1;
       animation: mistScroll 120s linear infinite;
     }
@@ -111,13 +111,10 @@
 
     .header {
       text-align: center;
-      margin-bottom: 2rem;
+      padding: 3rem 2rem 2rem;
       backdrop-filter: blur(5px);
-      padding: 2rem;
-      border-radius: 15px;
       background: rgba(0, 0, 0, 0.2);
-      position: relative;
-      z-index: 1;
+      margin-bottom: 2rem;
     }
 
     .mobile-menu-button {
@@ -145,7 +142,7 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
       gap: 1rem;
-      max-width: 700px;
+      max-width: 600px;
       margin: 0 auto 3rem;
       padding: 0 2rem;
       position: relative;
@@ -576,6 +573,19 @@
       display: flex;
     }
 
+    footer {
+      text-align: center;
+      padding: 3rem 2rem;
+      font-size: 0.9rem;
+      color: rgba(255,255,255,0.5);
+      font-family: 'Source Sans Pro', sans-serif;
+      backdrop-filter: blur(5px);
+      background: rgba(0, 0, 0, 0.2);
+      margin-top: 2rem;
+      position: relative;
+      z-index: 1;
+    }
+
     @media (max-width: 768px) {
       .container {
         padding: 1rem;
@@ -594,7 +604,7 @@
         gap: 0.8rem;
         max-height: 60vh;
         overflow-y: auto;
-        max-width: 400px;
+        max-width: 600px;
       }
 
       .nav-links {
@@ -631,11 +641,6 @@
       
       .game-card {
         padding: 1.5rem;
-      }
-      
-      .nav-back {
-        top: 1rem;
-        left: 1rem;
       }
 
       .header {
@@ -764,6 +769,10 @@
   </div>
 
   <button class="back-to-top" id="scrollTop" title="Back to top">↑</button>
+
+  <footer>
+    &copy; 2025 Sketchy Ponderings — quietly relentless.
+  </footer>
 
   <script>
     // Enhanced floating particles system
