--- a/games.html
+++ b/games.html
@@ -24,7 +24,7 @@
     .background {
       background: rgba(3, 3, 3, 0.4);
       opacity: 1;
-      position: fixed;
+      position: absolute;
       width: 100%;
       height: 100%;
       z-index: -2;
@@ -35,7 +35,7 @@
       opacity: 0.9;
       position: fixed;
       width: 100%;
-      height: 500vh;
+      height: 100%;
       z-index: -1;
       animation: mistScroll 120s linear infinite;
     }
