--- a/games.html
+++ b/games.html
@@ -540,6 +540,9 @@
       border-radius: 15px;
       position: relative;
       z-index: 1;
+      max-width: 1400px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .back-to-top {
@@ -660,27 +663,26 @@
   <div class="mist-overlay"></div>
   <div class="particles" id="particles"></div>
 
-  <div class="container">
-    <div class="header">
-      <h1>Game Worlds</h1>
-      <p class="subtitle">Interactive experiences from the threshold</p>
-    </div>
+  <div class="header">
+    <h1>Game Worlds</h1>
+    <p class="subtitle">Interactive experiences from the threshold</p>
+  </div>
 
-    <div class="nav">
-      <button class="mobile-menu-button" id="mobileMenuButton">☰ Menu</button>
-      <div class="nav-links" id="navLinks">
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="games.html" class="creative current">Games</a>
-        <a href="music.html" class="creative">Music</a>
-        <a href="stories.html">Stories</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-        <a href="https://watcheratthethreshold.github.io/subtle-sprits-cruxfade/" class="cruxfade-link" title="Enter Cruxfade">⟁ Cruxfade</a>
-      </div>
+  <div class="nav">
+    <button class="mobile-menu-button" id="mobileMenuButton">☰ Menu</button>
+    <div class="nav-links" id="navLinks">
+      <a href="index.html">Home</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="games.html" class="creative current">Games</a>
+      <a href="music.html" class="creative">Music</a>
+      <a href="stories.html">Stories</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+      <a href="https://watcheratthethreshold.github.io/subtle-sprits-cruxfade/" class="cruxfade-link" title="Enter Cruxfade">⟁ Cruxfade</a>
     </div>
+  </div>
 
-    <div class="games-grid">
+  <div class="games-grid">
       <!-- Cruxfade -->
       <div class="game-card">
         <h2 class="game-title">Cruxfade</h2>
