--- a/games.html
+++ b/games.html
@@ -286,7 +286,7 @@
       backdrop-filter: blur(15px);
       border: 1px solid rgba(255, 255, 255, 0.2);
       border-radius: 15px;
-      padding: 2rem;
+      padding: 2.5rem 2rem;
       transition: all 0.4s cubic-bezier(0.25, 0.1, 0.25, 1);
       position: relative;
       overflow: hidden;
@@ -540,7 +540,7 @@
       border-radius: 15px;
       position: relative;
       z-index: 1;
-      max-width: 1400px;
+      max-width: 1200px;
       margin-left: auto;
       margin-right: auto;
     }
@@ -643,7 +643,7 @@
       }
       
       .game-card {
-        padding: 1.5rem;
+        padding: 2rem 1.5rem;
       }
 
       .header {
