--- a/games.html
+++ b/games.html
@@ -115,6 +115,8 @@
       backdrop-filter: blur(5px);
       background: rgba(0, 0, 0, 0.2);
       margin-bottom: 2rem;
+      position: relative;
+      z-index: 10;
     }
 
     .mobile-menu-button {
@@ -146,7 +148,7 @@
       margin: 0 auto 3rem;
       padding: 0 2rem;
       position: relative;
-      z-index: 1;
+      z-index: 10;
     }
 
     .nav-links {
@@ -293,6 +295,7 @@
       transform: translateY(20px);
       opacity: 0;
       animation: fadeInUp 0.8s ease forwards;
+      z-index: 5;
     }
 
     .game-card:nth-child(2) {
@@ -533,16 +536,14 @@
       text-align: center;
       color: rgba(255, 255, 255, 0.6);
       font-style: italic;
-      margin-top: 3rem;
+      margin: 3rem auto;
       padding: 2rem;
       backdrop-filter: blur(5px);
       background: rgba(0, 0, 0, 0.2);
       border-radius: 15px;
       position: relative;
-      z-index: 1;
-      max-width: 1200px;
-      margin-left: auto;
-      margin-right: auto;
+      z-index: 10;
+      max-width: 900px;
     }
 
     .back-to-top {
@@ -682,7 +683,8 @@
     </div>
   </div>
 
-  <div class="games-grid">
+  <div class="games-container">
+    <div class="games-grid">
       <!-- Cruxfade -->
       <div class="game-card">
         <h2 class="game-title">Cruxfade</h2>
