--- a/games.html
+++ b/games.html
@@ -24,7 +24,7 @@
     .background {
       background: rgba(3, 3, 3, 0.4);
       opacity: 1;
-      position: absolute;
+      position: fixed;
       width: 100%;
       height: 100%;
       z-index: -2;
@@ -35,7 +35,9 @@
       opacity: 0.9;
       position: fixed;
       width: 100%;
-      height: 100%;
+      height: 500vh;
+      top: 0;
+      left: 0;
       z-index: -1;
       animation: mistScroll 120s linear infinite;
     }
@@ -116,7 +118,7 @@
       background: rgba(0, 0, 0, 0.2);
       margin-bottom: 2rem;
       position: relative;
-      z-index: 10;
+      z-index: 1;
     }
 
     .mobile-menu-button {
@@ -148,7 +150,7 @@
       margin: 0 auto 3rem;
       padding: 0 2rem;
       position: relative;
-      z-index: 10;
+      z-index: 1;
     }
 
     .nav-links {
@@ -295,7 +297,6 @@
       transform: translateY(20px);
       opacity: 0;
       animation: fadeInUp 0.8s ease forwards;
-      z-index: 5;
     }
 
     .game-card:nth-child(2) {
@@ -536,14 +537,16 @@
       text-align: center;
       color: rgba(255, 255, 255, 0.6);
       font-style: italic;
-      margin: 3rem auto;
+      margin-top: 3rem;
       padding: 2rem;
       backdrop-filter: blur(5px);
       background: rgba(0, 0, 0, 0.2);
       border-radius: 15px;
       position: relative;
-      z-index: 10;
-      max-width: 900px;
+      z-index: 1;
+      max-width: 1000px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .back-to-top {
@@ -683,8 +686,7 @@
     </div>
   </div>
 
-  <div class="games-container">
-    <div class="games-grid">
+  <div class="games-grid">
       <!-- Cruxfade -->
       <div class="game-card">
         <h2 class="game-title">Cruxfade</h2>
