--- a/games.html
+++ b/games.html
@@ -391,9 +391,9 @@
     }
 
     .status-stopped {
-      background: rgba(180, 15, 15, 0.2);
-      color: #b40f0f;
-      border: 1px solid rgba(180, 15, 15, 0.3);
+      background: rgba(231, 76, 60, 0.2);
+      color: #e74c3c;
+      border: 1px solid rgba(231, 76, 60, 0.3);
     }
 
     .game-description {
